[gd_scene load_steps=20 format=2]

[ext_resource path="res://Menu/IdleMenu.png" type="Texture" id=1]
[ext_resource path="res://Menu/titlescreen_space_scroll.png" type="Texture" id=2]
[ext_resource path="res://Menu/stage_bg.png" type="Texture" id=3]
[ext_resource path="res://Menu/stage_bg2.png" type="Texture" id=4]
[ext_resource path="res://Menu/La-travesia-del-Minero.png" type="Texture" id=5]
[ext_resource path="res://Menu/SalirClick.png" type="Texture" id=6]
[ext_resource path="res://Menu/Inicio.png" type="Texture" id=7]
[ext_resource path="res://Menu/Salir.png" type="Texture" id=8]
[ext_resource path="res://Menu/InicioClick.png" type="Texture" id=9]
[ext_resource path="res://Menu.gd" type="Script" id=10]
[ext_resource path="res://Menu/IdleFrontMenu.png" type="Texture" id=11]
[ext_resource path="res://Menu/RankingClick.png" type="Texture" id=12]
[ext_resource path="res://Menu/Ranking.png" type="Texture" id=13]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Anima",
"speed": 2.0
} ]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 11 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[node name="Node" type="Node"]
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 159, 130.75 )
scale = Vector2( 0.503125, 0.591667 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 160, 11.5 )
scale = Vector2( 0.5, 1.04167 )
texture = ExtResource( 4 )

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( 157.842, 53.4782 )
scale = Vector2( 0.350787, 0.649889 )
texture = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 48, 120 )
scale = Vector2( 2.25, 2.25 )
frames = SubResource( 3 )
animation = "Anima"
playing = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 120.0
margin_top = 79.0
margin_right = 192.0
margin_bottom = 103.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 119.0
margin_top = 140.0
margin_right = 191.0
margin_bottom = 164.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="."]
margin_left = 120.0
margin_top = 110.0
margin_right = 192.0
margin_bottom = 134.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 261, 120 )
scale = Vector2( 2.25, 2.25 )
frames = SubResource( 6 )
playing = true
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_TextureButton3_pressed"]
